[gd_scene load_steps=12 format=2]

[ext_resource path="res://Mode_N_Pers.gd" type="Script" id=1]
[ext_resource path="res://images/wall.png" type="Texture" id=2]
[ext_resource path="res://New Super Mario Font U.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://images/btn_normal.png" type="Texture" id=4]
[ext_resource path="res://images/btn_pressed.png" type="Texture" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 174, 85 )

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 174, 85 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 174, 85 )

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 38
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Mode" type="Node2D"]
script = ExtResource( 1 )

[node name="Sfondo" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 500, 300 )
z_index = -1
texture = ExtResource( 2 )

[node name="btn_10_pers" type="Button" parent="."]
margin_left = 360.0
margin_top = 213.0
margin_right = 720.0
margin_bottom = 303.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "10 personaggi"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_20_pers" type="Button" parent="."]
margin_left = 360.0
margin_top = 323.0
margin_right = 720.0
margin_bottom = 413.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "20 personaggi"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_all_pers" type="Button" parent="."]
margin_left = 360.0
margin_top = 442.0
margin_right = 720.0
margin_bottom = 532.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Tuttih"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titolo" type="Label" parent="."]
margin_left = 92.214
margin_top = 51.0
margin_right = 946.214
margin_bottom = 91.0
custom_fonts/font = SubResource( 6 )
text = "Scegli il numero dei personaggi da indovinare"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btn_10_pers" to="." method="_on_btn_10_pers_pressed"]
[connection signal="pressed" from="btn_20_pers" to="." method="_on_btn_20_pers_pressed"]
[connection signal="pressed" from="btn_all_pers" to="." method="_on_btn_all_pers_pressed"]
